# rust-swc

./: Cargo.toml  README.md  install.sh  test.txt
.github/workflows/: build.yml  cd.yml  ci.yml  deploy.yml  main.yml  release copy.yml1  release.yml  rust.yml  test.yml
ci/: make-release.sh
src/: main.rs
tests/: cli.rs
